fix: background image on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -57,3 +57,19 @@ footer div div img {
     background-color: white;
     border-radius: 10px;
 }
+
+@media only screen and (max-width: 100%) {
+    nav {
+        margin-top: 0;
+    }
+    nav a {
+        margin: 5px;
+        font-size: large;
+    }
+    footer p {
+        font-size: medium;
+    }
+    footer div div img {
+        margin: 5px;
+    }
+}
